--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Quicksand', sans-serif;
     padding: 0;
     margin: 0 auto;
-    background-image: url('images\\brown-wooden-flooring.jpg');
+    background-image: url('images\\brown-wooden-flooring.jpg'); /*Image by rawpixel.com on Freepik */
     background-size: 100% 40%;
 }
 
