--- a/curriculum-vitae.css
+++ b/curriculum-vitae.css
@@ -5,7 +5,7 @@
 
 main {
     min-height: 100vh;
-    background-image: url('images\\curriculum_vitae\\color_map.jpg'); /*Image by rawpixel.com on Freepik */
+    background-image: url('images\\curriculum_vitae\\color_map.jpg');
     background-size: 100% 100%;
     display: flex;
     flex-direction: column;
@@ -21,10 +21,9 @@ main {
     max-width: 720px;
 
     border: 3px solid rgb(0, 0, 0);
-    border-radius: 1%;
+    border-radius: 1rem;
     background: rgb(241, 207, 156);
     box-shadow: -0.2rem 0.2rem 1rem 0.5rem rgba(0, 0, 0, 0.5);
-    background-size: 100%;
 }
 
 .character-sheet .section-heading {
@@ -39,14 +38,6 @@ main {
     transform: translate(-50%, 0%);
     width: 128px;
     height: auto;
-}
-
-#dice1 {
-    margin-top: 1000px;
-    margin-left: 400px;
-}
-
-#dice2 {
     margin-top: -40px;
     margin-left: -360px;
 }
@@ -59,8 +50,8 @@ main {
     width: 64px;
     height: auto;
 
-    margin-top: 600px;
-    margin-left: 20px;
+    margin-top: 980px;
+    margin-left: 330px;
 }
 
 .character-sheet .heading {
