--- a/blog.css
+++ b/blog.css
@@ -16,6 +16,7 @@ main {
 .post-block {
     position: relative;
     width: 100%;
+    height: 240px;
     display: flex;
     color: black;
     text-decoration: none;
@@ -35,8 +36,8 @@ main {
 }
 
 .post-block img {
-    width: 33%;
-    height: 33%;
+    height: 100%;
+    width: 240px;
     object-fit: cover;
 }
 
