--- a/blog/post-style.css
+++ b/blog/post-style.css
@@ -25,9 +25,10 @@ hr {
 }
 
 .post-title {
-    width: 720px;
+    max-width: 720px;
     color: #333;
     font-size: xx-large;
+    align-self: center;
     margin-bottom: 0;
 }
 
@@ -71,8 +72,9 @@ hr {
 }
 
 .paragraph-with-image .image {
+    align-self: center;
     width: 288px;
-    height: auto;
+    height: 288px;
     margin-left: 1rem;
     border: 1px solid black;
     border-radius: 1rem;
