--- a/css/curriculum-vitae-style.css
+++ b/css/curriculum-vitae-style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'vinque-rg';
-    src: url('fonts\\vinque-rg.woff') format('woff');
+    src: url("/fonts/vinque-rg.woff") format('woff');
 }
 
 main {
     min-height: 100vh;
-    background-image: url('images\\curriculum_vitae\\color_map.jpg');
+    background-image: url("/images/curriculum_vitae/table_texture.jpg");
     background-size: 100% 100%;
     display: flex;
     flex-direction: column;
